--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,9 +8,12 @@ jobs:
   build-and-push:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout Code
+        uses: actions/checkout@v3
+
       - name: Login to DockerHub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+
       - name: Build and Push
         run: |
           docker build -t ${{ secrets.DOCKER_USERNAME }}/flask-app:latest .
@@ -20,14 +23,19 @@ jobs:
     needs: build-and-push
     runs-on: ubuntu-latest
     steps:
-      - name: Deploy to EC2
+      - name: Deploy to Amazon Linux EC2
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.EC2_HOST }}
-          username: ${{ secrets.EC2_USER }}
+          username: ${{ secrets.EC2_USER }} # Must be 'ec2-user' in GitHub Secrets
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
-            docker pull ${{ secrets.DOCKER_USERNAME }}/flask-app:latest
+            # Clean up old containers to prevent port conflicts
             docker stop my-app || true
             docker rm my-app || true
-            docker run -d --name my-app -p 5000:5000 ${{ secrets.DOCKER_USERNAME }}/flask-app:latest
+            
+            # Pull the fresh image from Docker Hub
+            docker pull ${{ secrets.DOCKER_USERNAME }}/flask-app:latest
+            
+            # Run the container mapping Port 80 to your App Port (5000 or 8000)
+            docker run -d --name my-app -p 80:5000 ${{ secrets.DOCKER_USERNAME }}/flask-app:latest
