--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,23 +15,23 @@ jobs:
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
-            # 1. Navigate to app folder or create it
-            mkdir -p ~/my-flask-app
-            cd ~/my-flask-app
+            # Navigate to the project folder
+            cd ~/my-flask-app || mkdir -p ~/my-flask-app && cd ~/my-flask-app
 
-            # 2. If git isn't initialized, clone. If it is, pull latest.
+            # Pull the latest code from GitHub
             if [ ! -d ".git" ]; then
               git clone https://github.com/${{ github.repository }}.git .
             else
               git pull origin main
             fi
 
-            # 3. Build the Docker image locally on the EC2
+            # 1. Build the image locally on Amazon Linux
             docker build -t local-flask-app .
 
-            # 4. Stop and remove old container
+            # 2. Stop and remove the old container if it exists
             docker stop flask-container || true
             docker rm flask-container || true
 
-            # 5. Run the new container
+            # 3. The FIX: Map Host Port 80 to Container Port 5000
+            # This allows you to visit the site without typing :5000
             docker run -d --name flask-container -p 80:5000 local-flask-app
